[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thread-tasker"
version = "0.0.1"
authors = [
  { name="Morgiver", email="me@morgiver.net" },
]
description = "A package to render trading charts with the SDL2"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Morgiver/thread-tasker"
"Bug Tracker" = "https://github.com/Morgiver/thread-tasker/issues"
